--- a/CSHearth/CSHearth.csproj
+++ b/CSHearth/CSHearth.csproj
@@ -19,6 +19,11 @@
     <WarningLevel>4</WarningLevel>
     <Externalconsole>true</Externalconsole>
     <PlatformTarget>x86</PlatformTarget>
+    <CustomCommands>
+      <CustomCommands>
+        <Command type="AfterBuild" command="cp -f ${ProjectDir}/src/cshearth/decks/* ${ProjectDir}/bin/Debug/" />
+      </CustomCommands>
+    </CustomCommands>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>full</DebugType>
@@ -57,6 +62,20 @@
     <Compile Include="src\cshearth\GameLogic.cs" />
     <Compile Include="src\cshearth\card\minion\Minion.cs" />
     <Compile Include="src\cshearth\card\minion\MinionType.cs" />
+    <Compile Include="src\cshearth\card\minion\concrete\ChillwindYeti.cs" />
+    <Compile Include="src\cshearth\action\Action.cs" />
+    <Compile Include="src\cshearth\action\AttackHeroWithMinionAction.cs" />
+    <Compile Include="src\cshearth\action\AttackMinionWithMinionAction.cs" />
+    <Compile Include="src\cshearth\action\EndTurnAction.cs" />
+    <Compile Include="src\cshearth\action\PlayCardAction.cs" />
+    <Compile Include="src\cshearth\action\PlayCardTargetingHeroAction.cs" />
+    <Compile Include="src\cshearth\action\PlayCardTargetingMinionAction.cs" />
+    <Compile Include="src\cshearth\action\PlayMinionAction.cs" />
+    <Compile Include="src\cshearth\action\PlayMinionTargetingHeroAction.cs" />
+    <Compile Include="src\cshearth\action\PlayMinionTargetingMinionAction.cs" />
+    <Compile Include="src\cshearth\Match.cs" />
+    <Compile Include="src\cshearth\deck\DeckParser.cs" />
+    <Compile Include="src\cshearth\Session.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -70,5 +89,11 @@
     <Folder Include="src\cshearth\card\" />
     <Folder Include="src\cshearth\board\" />
     <Folder Include="src\cshearth\card\minion\" />
+    <Folder Include="src\cshearth\card\minion\concrete\" />
+    <Folder Include="src\cshearth\action\" />
+    <Folder Include="src\cshearth\decks\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\cshearth\decks\ExampleDeck0.txt" />
   </ItemGroup>
 </Project>
